test/Fail/Issue1698-primitive.agda
primitive
  data D : Set where

-- Bad error message WAS:
-- A postulate block can only contain type signatures or instance blocks
