test/Fail/Issue1698-primitive.err
Issue1698-primitive.agda:2,3-3
Issue1698-primitive.agda:2,3: Parse error
data<ERROR>
 D : Set where

-- Bad error m...
